--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">MyPets</string>
     <string name="title_activity_welcome">Home Screen</string>
-    <string name="next">NEXT</string>
-    <string name="skip">SKIP</string>
+    <string name="next">Tiếp</string>
+    <string name="skip">Bỏ qua</string>
     <string name="start">GOT IT</string>
 
     <string name="slide_1_title">Hello Food!</string>
@@ -19,4 +19,8 @@
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
+
+    <string name="gender_unknown">Không rõ</string>
+    <string name="gender_male">Hoàng Thượng</string>
+    <string name="gender_female">Thái Hậu</string>
 </resources>
